--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "tailwindcss": "^4.0.9"
+        "@tailwindcss/vite": "^4.0.11",
+        "tailwindcss": "^4.0.11"
     }
 }
